start swagger for todo api
