# openapi.json
@@ -16,6 +16,10 @@
     {
       "name": "Comments",
       "description": "User comments on posts."
+    },
+    {
+      "name": "Todos",
+      "description": "Todo list"
     }
   ],
   "paths": {
@@ -294,6 +298,29 @@
           }
         }
       }
+    },
+    "/todos": {
+      "get": {
+        "tags": [
+          "Todos"
+        ],
+        "summary": "Get all todos.",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Todo"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -342,6 +369,21 @@
           "img_url": {
             "type": "string",
             "format": "uri"
+          }
+        }
+      },
+      "Todo": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "complete": {
+            "type": "boolean"
           }
         }
       }
